# ESP32_Display_Panel

./: .build-rules.yml  .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  ESP_Panel_Board_Custom.h  ESP_Panel_Board_Supported.h  ESP_Panel_Conf.h  ESP_Panel_Conf_Template.h  Kconfig  Kconfig.bk  README.md  README_CN.md  check_copyright_config.yaml  conftest.py  esp_panel_board_custom_conf.h  esp_panel_board_supported_conf.h  idf_component.yml  library.properties
docs/: Board_Contribution_Guide.md  Board_Contribution_Guide_CN.md  Board_Instructions.md  FAQ.md  FAQ_CN.md  How_To_Use.md  How_To_Use_CN.md  LCD_Controllers.md  Touch_Controllers.md
mpy_support/: README.md
src/: ESP_Panel.cpp  ESP_Panel.h  ESP_PanelBacklight.cpp  ESP_PanelBacklight.h  ESP_PanelBus.cpp  ESP_PanelBus.h  ESP_PanelHost.cpp  ESP_PanelHost.h  ESP_PanelLcd.cpp  ESP_PanelLcd.h  ESP_PanelLcdTouch.cpp  ESP_PanelLcdTouch.h  ESP_PanelLog.h  ESP_PanelPrivate.cpp  ESP_PanelPrivate.h  ESP_PanelTypes.h  ESP_PanelVersions.h  ESP_Panel_Board_Internal.h  ESP_Panel_Board_Kconfig.h  ESP_Panel_Conf_Internal.h  ESP_Panel_Conf_Kconfig.h  ESP_Panel_Library.h  esp_display_panel.hpp  esp_panel_conf_internal.h  esp_panel_types.h  esp_panel_versions.h
template_files/: lvgl_v8_port.cpp
test_apps/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32_c3_lcdkit  sdkconfig.defaults.esp32_s3_box  sdkconfig.defaults.esp32_s3_box_3  sdkconfig.defaults.esp32_s3_box_lite  sdkconfig.defaults.esp32_s3_eye  sdkconfig.defaults.esp32_s3_korvo_2  sdkconfig.defaults.esp32_s3_lcd_ev_board  (+2 more)
(+650 files in other folders)
